tests/tmytests/bad/field_collision_3.lat
class Ok {
    int a;
    int b;
}

class BadKiddo extends Ok {
    int b;
}

int main() {
    return 0;
}